vans sneakers image added to index.html

--- a/project-landing-page/index.html
+++ b/project-landing-page/index.html
@@ -59,6 +59,8 @@
             <img src="yeezy.jpg" height="170" width="170" alt="yeezy sneakers">
 
             <img src="nike.jpg" height="170" width="170" alt="nike sneakers">
+
+            <img src="vans.jpg" height="170" width="170" alt="vans sneakers">
             
 
 
