puma sneakers image added to index.html

--- a/project-landing-page/index.html
+++ b/project-landing-page/index.html
@@ -61,7 +61,8 @@
             <img src="nike.jpg" height="170" width="170" alt="nike sneakers">
 
             <img src="vans.jpg" height="170" width="170" alt="vans sneakers">
-            
+
+            <img src="puma.jpg" height="170" width="170" alt="puma sneakers">
 
 
         </div>
