Text In Container 3 Completed
I completed the text in container 3, then i added line breaks so it layed out how i wanted

--- a/project-landing-page/index.html
+++ b/project-landing-page/index.html
@@ -87,7 +87,8 @@
 
         <div class="container3">
         
-            <p>Litt Sneaker Club is one of the most trusted sources to order high-end sneakers online.</p>    
+            <p>Litt Sneaker Club is one of the most trusted sources<br>to order high-end sneakers online. Everything that<br> 
+               we offer is authentic and certified. We look forward<br>to adding new members to the club.</p>   
 
 
             
